--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 name: Notely
+description: In this blog I will announce updates of the Notely Browser Extension and write about all aspects of web and UX design
 url: "http://notely.github.io"
 paginate: 5
 paginate_path: "blog/page:num"
